--- a/i18n/locales/bengali/translations.json
+++ b/i18n/locales/bengali/translations.json
@@ -20,7 +20,7 @@
     "no-posts": "No posts",
     "one-post": "1 post",
     "multiple-posts": "{{ postCount }} posts",
-    "read-more": "Read {{ <0> }}more posts{{ </0> }} by this {{ role }}."
+    "read-more": "Read {{ <0> }}more posts{{ </0> }}."
   },
   "tag": {
     "no-posts": "A collection of posts",
@@ -32,21 +32,22 @@
     "go-to-front-page": "Go to the front page"
   },
   "social-row": {
-    "author-has-twitter": "If you read this far, tweet to the author to show them you care. {{ <0> }}Tweet a thanks{{ </0> }}",
-    "author-no-twitter": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}.",
-    "default-tweet": "Thank you {{ twitter }} for writing this helpful article."
+    "cta": {
+      "tweet-a-thanks": "If you read this far, tweet to the author to show them you care. {{ <0> }}Tweet a thanks{{ </0> }}",
+      "tweet-it": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}."
+    },
+    "tweets": {
+      "default": "Thank you {{ author }} for writing this helpful article.",
+      "translation": "Thank you {{ author }} for writing this helpful article, and {{ translator }} for translating it."
+    }
   },
   "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
-  "localization-meta": {
+  "original-author-translator": {
     "roles": {
-      "author": "author",
-      "translator": "translator"
+      "author": "Author: {{ name }} ({{ locale }})",
+      "translator": "Translator: {{ name }}"
     },
-    "bylines": {
-      "author": "{{ role }}: {{ name }} ({{ locale }})",
-      "translator": "{{ role }}: {{ name }}"
-    },
-    "info": {
+    "details": {
       "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }} by {{ author }}",
       "translated-by": "{{ <0> }}Translated by:{{ </0> }} {{ translator }}"
     },
