--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -20,7 +20,7 @@
     "no-posts": "Não há artigos",
     "one-post": "1 artigo",
     "multiple-posts": "{{ postCount }} artigos",
-    "read-more": "Ler {{ <0> }}mais publicações{{ </0> }} deste {{ role }}."
+    "read-more": "Ler {{ <0> }}mais publicações{{ </0> }}."
   },
   "tag": {
     "no-posts": "Uma coleção de artigos",
@@ -32,21 +32,22 @@
     "go-to-front-page": "Ir para a página inicial"
   },
   "social-row": {
-    "author-has-twitter": "Se você leu até aqui, envie uma mensagem no Twitter para o autor para mostrar que você se importa com o trabalho. {{ <0> }}Agradeça no Twitter{{ </0> }}",
-    "author-no-twitter": "Se este artigo foi útil, compartilhe-o no {{ <0> }}Twitter{{ </0> }}.",
-    "default-tweet": "Obrigado, {{ twitter }}, por ter escrito este artigo. Foi muito útil."
+    "cta": {
+      "tweet-a-thanks": "Se você leu até aqui, envie uma mensagem no Twitter para o autor para mostrar que você se importa com o trabalho. {{ <0> }}Agradeça no Twitter{{ </0> }}",
+      "tweet-it": "Se este artigo foi útil, compartilhe-o no {{ <0> }}Twitter{{ </0> }}."
+    },
+    "tweets": {
+      "default": "Obrigado, {{ author }}, por ter escrito este artigo. Foi muito útil.",
+      "translation": "Obrigado {{ author }} por escrever este artigo útil e {{ translator }} por traduzi-lo."
+    }
   },
   "learn-to-code-cta": "Aprenda a programar gratuitamente. O plano de estudos em código aberto do freeCodeCamp já ajudou mais de 40.000 pessoas a obter empregos como desenvolvedores. {{ <0> }}Comece agora{{ </0> }}",
-  "localization-meta": {
+  "original-author-translator": {
     "roles": {
-      "author": "autor",
-      "translator": "tradutor"
+      "author": "Autor: {{ name }} (em {{ locale }})",
+      "translator": "Tradutor: {{ name }}"
     },
-    "bylines": {
-      "author": "{{ role }}: {{ name }} (em {{ locale }})",
-      "translator": "{{ role }}: {{ name }}"
-    },
-    "info": {
+    "details": {
       "original-article": "{{ <0> }}Artigo original:{{ </0> }} {{ title }}, escrito por {{ author }}",
       "translated-by": "{{ <0> }}Traduzido e adaptado por:{{ </0> }} {{ translator }}"
     },
