--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -38,7 +38,7 @@
     },
     "tweets": {
       "default": "Grazie {{ author }} per avere tradotto questo utile articolo.",
-      "translation": "Grazie {{ author }} per avere tradotto questo utile articolo e {{ translator }} per averlo tradotto."
+      "translation": "Grazie {{ author }} per avere scritto questo utile articolo e {{ translator }} per averlo tradotto."
     }
   },
   "learn-to-code-cta": "Impara a programmare gratuitamente. Il curriculum open source di freeCodeCamp ha aiutato più di 40.ooo persone ad ottenere un lavoro come programmatori. {{ <0> }}Inizia{{ </0> }}",
