--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -58,7 +58,7 @@
       "portuguese": "portoghese",
       "italian": "italiano",
       "japanese": "giapponese",
-      "arabic": "araba",
+      "arabic": "arabo",
       "urdu": "urdu",
       "bengali": "bengalese"
     }
