fix: update tweets.translation string based on review

--- a/i18n/locales/espanol/translations.json
+++ b/i18n/locales/espanol/translations.json
@@ -38,7 +38,7 @@
     },
     "tweets": {
       "default": "Gracias {{ author }} por escribir este útil artículo.",
-      "translation": "Gracias {{ author }} por escribir este útil artículo y {{ translator }} por traducirlo y adaptado."
+      "translation": "Gracias {{ author }} por escribir este útil artículo y {{ translator }} por tu traducción."
     }
   },
   "learn-to-code-cta": "Aprende a codificar de forma gratuita. El plan de estudios de código abierto de freeCodeCamp ha ayudado a más de 40,000 personas a obtener trabajos como desarrolladores. {{ <0> }}Empieza{{ </0> }}",
