--- a/i18n/locales/urdu/translations.json
+++ b/i18n/locales/urdu/translations.json
@@ -49,7 +49,7 @@
     },
     "details": {
       "original-article": "{{ <0> }}اصل مضمون:{{ </0> }} {{ title }} از {{ author }}",
-      "translated-by": "{{ <0> }}ترجمہ از:{{ </0> }} {{ translator }}"
+      "translated-by": "{{ <0> }}مترجم :{{ </0> }} {{ translator }}"
     },
     "locales": {
       "english": "انگریزی",
