--- a/i18n/locales/arabic/translations.json
+++ b/i18n/locales/arabic/translations.json
@@ -34,7 +34,7 @@
   "social-row": {
     "cta": {
       "tweet-a-thanks": "إذا قرأت لهذا الحد ، فغرد للمؤلف لتُظهر له أنك مهتم. {{ <0> }}اشكره علي تويتر{{ </0> }}",
-      "tweet-it": "إذا كانت هذه المقالة مفيدة, {{ <0> }}شاركها علي تويتر{{ </0> }}."
+      "tweet-it": "إذا كانت هذه المقالة مفيدة، {{ <0> }}شاركها علي تويتر{{ </0> }}."
     },
     "tweets": {
       "default": "شكرا لك {{ author }} لكتابة هذا المقال المفيد.",
