--- a/i18n/locales/arabic/translations.json
+++ b/i18n/locales/arabic/translations.json
@@ -37,7 +37,7 @@
       "tweet-it": "إذا كانت هذه المقالة مفيدة، {{ <0> }}شاركها علي تويتر{{ </0> }}."
     },
     "tweets": {
-      "default": "شكرا لك {{ author }} لكتابة هذا المقال المفيد.",
+      "default": "شكرا {{ author }} لكتابة هذه المقالة المفيدة.",
       "translation": "شكرًا لك {{ author }} على كتابة هذه المقالة المفيدة ، وشكرًا {{ translator }} على ترجمتها."
     }
   },
