--- a/i18n/locales/arabic/translations.json
+++ b/i18n/locales/arabic/translations.json
@@ -58,7 +58,7 @@
       "portuguese": "البرتغالية",
       "italian": "الايطالية",
       "japanese": "اليابانية",
-      "arabic": "عربى",
+      "arabic": "العربية",
       "urdu": "الأردية",
       "bengali": "البنغالية"
     }
