--- a/i18n/locales/japanese/translations.json
+++ b/i18n/locales/japanese/translations.json
@@ -38,7 +38,7 @@
     },
     "tweets": {
       "default": "この記事が参考になりました。{{ author }} さんありがとうございます。",
-      "translation": "この役立つ記事を書いてくれた{{ author }}と、翻訳してくれた{{ translator }}に感謝します。"
+      "translation": "この役に立つ記事を書いてくれた {{ author }} さんと、翻訳してくれた {{ translator }} さんに感謝します。"
     }
   },
   "learn-to-code-cta": "コーディングを無料で学びましょう。freeCodeCamp のオープンソースカリキュラムによって、40,000 人以上の人々が開発者としての仕事を得ています。{{ <0> }}始める{{ </0> }}",
