--- a/i18n/locales/arabic/translations.json
+++ b/i18n/locales/arabic/translations.json
@@ -38,7 +38,7 @@
     },
     "tweets": {
       "default": "شكرا {{ author }} لكتابة هذه المقالة المفيدة.",
-      "translation": "شكرًا لك {{ author }} على كتابة هذه المقالة المفيدة ، وشكرًا {{ translator }} على ترجمتها."
+      "translation": "شكرًا {{ author }} لكتابة هذه المقالة المفيدة ، وشكرًا {{ translator }} على الترجمة."
     }
   },
   "learn-to-code-cta": "تعلم البرمجة مجانا. ساعد منهج freeCodeCamp مفتوح المصدر أكثر من ٤٠ ألف شخص في الحصول على وظائف كمطورين. {{ <0> }}ابدأ الان{{ </0> }}",
