--- a/i18n/locales/italian/translations.json
+++ b/i18n/locales/italian/translations.json
@@ -16,11 +16,11 @@
     "authenticated": "Supporta la nostra no-profit e la nostra missione. {{ <0> }}Dona a freeCodeCamp.org{{ </0> }}.",
     "authenticated-donor": "Grazie per supportare freeCodeCamp con le {{ <0> }}tue donazioni{{ </0> }}."
   },
+  "default-bio": "Leggi {{ <0> }}altri articoli{{ </0> }}.",
   "author": {
     "no-posts": "Non ci sono articoli",
     "one-post": "1 articolo",
-    "multiple-posts": "{{ postCount }} articoli",
-    "read-more": "Leggi {{ <0> }}altri articoli{{ </0> }}."
+    "multiple-posts": "{{ postCount }} articoli"
   },
   "tag": {
     "no-posts": "Una collezione di articoli",
