--- a/i18n/locales/portuguese/translations.json
+++ b/i18n/locales/portuguese/translations.json
@@ -16,11 +16,11 @@
     "authenticated": "Apoie nossa organização sem fins lucrativos e nossa missão. {{ <0> }}Faça sua doação para o freeCodeCamp.org{{ </0> }}.",
     "authenticated-donor": "Obrigado por apoiar o freeCodeCamp com {{ <0> }}suas doações{{ </0> }}."
   },
+  "default-bio": "Ler {{ <0> }}mais publicações{{ </0> }}.",
   "author": {
     "no-posts": "Não há artigos",
     "one-post": "1 artigo",
-    "multiple-posts": "{{ postCount }} artigos",
-    "read-more": "Ler {{ <0> }}mais publicações{{ </0> }}."
+    "multiple-posts": "{{ postCount }} artigos"
   },
   "tag": {
     "no-posts": "Uma coleção de artigos",
