--- a/i18n/locales/urdu/translations.json
+++ b/i18n/locales/urdu/translations.json
@@ -38,7 +38,7 @@
     },
     "tweets": {
       "default": "آپ کا بہت شکریہ، آپ نیں یہ آرٹیکل لکھا.  {{ author }} .",
-      "translation": "کا یہ مفید مضمون لکھنے کے لیے  {{ author }}، اور {{ translator }} کا ترجمہ کرنے کا شکریہ۔"
+      "translation": "مصنف: {{ author }} کا یہ مفید مضمون لکھنے کے لیے، اور مترجم: {{ translator }} کا ترجمہ کرنے کا شکریہ۔"
     }
   },
   "learn-to-code-cta": "مفت میں coding کرنا سیکھیں. freeCodeCamp کے open source نصاب نے 40،000 سے زیادہ لوگوں کو ڈویلپر جاب ملنے میں مدد کی ہے. {{ <0> }} شروع کریں{{ </0> }}",
