--- a/config/i18n/locales/arabic/translations.json
+++ b/config/i18n/locales/arabic/translations.json
@@ -16,11 +16,11 @@
     "authenticated": "قم بدعم مهمتنا و منظمتنا الغير ربحية. {{ <0> }}تبرع إلى freeCodeCamp.org{{ </0> }}.",
     "authenticated-donor": "شكرًا لك على دعم freeCodeCamp {{ <0> }}من خلال {{ <0/> }}تبرعاتك."
   },
+  "default-bio": "اقرأ {{ <0> }}مقالات اكثر{{ </0> }}.",
   "author": {
     "no-posts": "لا يوجد مقالات",
     "one-post": "مقال ١",
-    "multiple-posts": "{{ postCount }} مقالات",
-    "read-more": "اقرأ {{ <0> }}مقالات اكثر{{ </0> }} من تأليف {{ role }}."
+    "multiple-posts": "{{ postCount }} مقالات"
   },
   "tag": {
     "no-posts": "مجموعة من المقالات",
@@ -32,23 +32,35 @@
     "go-to-front-page": "اذهب للصفحة الامامية"
   },
   "social-row": {
-    "author-has-twitter": "إذا قرأت لهذا الحد ، فغرد للمؤلف لتظهر له أنك تهتم. {{ <0> }}اشكره علي تويتر{{ </0> }}",
-    "author-no-twitter": "إذا كانت هذه المقالة مفيدة, {{ <0> }}شاركها علي تويتر{{ </0> }}.",
-    "default-tweet": "شكرا لك {{ twitter }} لكتابة هذا المقال المفيد."
+    "cta": {
+      "tweet-a-thanks": "إذا قرأت لهذا الحد ، فغرد للمؤلف لتُظهر له أنك مهتم. {{ <0> }}اشكره علي تويتر{{ </0> }}",
+      "tweet-it": "إذا كانت هذه المقالة مفيدة، {{ <0> }}شاركها علي تويتر{{ </0> }}."
+    },
+    "tweets": {
+      "default": "شكرا {{ author }} لكتابة هذه المقالة المفيدة.",
+      "translation": "شكرًا {{ author }} لكتابة هذه المقالة المفيدة ، وشكرًا {{ translator }} على الترجمة."
+    }
   },
   "learn-to-code-cta": "تعلم البرمجة مجانا. ساعد منهج freeCodeCamp مفتوح المصدر أكثر من ٤٠ ألف شخص في الحصول على وظائف كمطورين. {{ <0> }}ابدأ الان{{ </0> }}",
-  "localization-meta": {
+  "original-author-translator": {
     "roles": {
-      "author": "المؤلف",
-      "translator": "المترجم"
+      "author": "المؤلف: {{ name }} ({{ locale }})",
+      "translator": "المترجم: {{ name }}"
     },
-    "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "الانجليزية",
-      "es": "الاسبانية",
-      "zh": "الصينية",
-      "pt-br": "البرتغالية",
-      "it": "الايطالية"
+    "details": {
+      "original-article": "{{ <0> }} المقالة الأصلية: {{ </0> }} {{ title }} بقلم {{ author }}",
+      "translated-by": "{{ <0> }} تُرجِمت بواسطة: {{ </0> }} {{ translator }}"
+    },
+    "locales": {
+      "english": "الانجليزية",
+      "espanol": "الاسبانية",
+      "chinese": "الصينية",
+      "portuguese": "البرتغالية",
+      "italian": "الايطالية",
+      "japanese": "اليابانية",
+      "arabic": "العربية",
+      "urdu": "الأردية",
+      "bengali": "البنغالية"
     }
   },
   "embed-title": "محتوى مضمن",
