--- a/config/i18n/locales/italian/translations.json
+++ b/config/i18n/locales/italian/translations.json
@@ -16,11 +16,11 @@
     "authenticated": "Supporta la nostra no-profit e la nostra missione. {{ <0> }}Dona a freeCodeCamp.org{{ </0> }}.",
     "authenticated-donor": "Grazie per supportare freeCodeCamp con le {{ <0> }}tue donazioni{{ </0> }}."
   },
+  "default-bio": "Leggi {{ <0> }}altri articoli{{ </0> }}.",
   "author": {
     "no-posts": "Non ci sono articoli",
     "one-post": "1 articolo",
-    "multiple-posts": "{{ postCount }} articoli",
-    "read-more": "Leggi {{ <0> }}altri articoli{{ </0> }} di questo {{ role }}."
+    "multiple-posts": "{{ postCount }} articoli"
   },
   "tag": {
     "no-posts": "Una collezione di articoli",
@@ -32,23 +32,35 @@
     "go-to-front-page": "Vai alla Home"
   },
   "social-row": {
-    "author-has-twitter": "Se hai letto fino a qui, twitta al traduttore per ringraziarlo. {{ <0> }}Twitta un ringraziamento{{ </0> }}",
-    "author-no-twitter": "Se questo articolo ti è stato utile, {{ <0> }}twittalo{{ </0> }}.",
-    "default-tweet": "Grazie {{ twitter }} per avere tradotto questo utile articolo."
+    "cta": {
+      "tweet-a-thanks": "Se hai letto fino a qui, {{ <0> }}scrivi un tweet di ringraziamento!{{ </0> }}",
+      "tweet-it": "Se questo articolo ti è stato utile, {{ <0> }}twittalo{{ </0> }}."
+    },
+    "tweets": {
+      "default": "Grazie {{ author }} per avere scritto questo utile articolo.",
+      "translation": "Grazie {{ author }} per avere scritto questo utile articolo e {{ translator }} per averlo tradotto."
+    }
   },
   "learn-to-code-cta": "Impara a programmare gratuitamente. Il curriculum open source di freeCodeCamp ha aiutato più di 40.ooo persone ad ottenere un lavoro come programmatori. {{ <0> }}Inizia{{ </0> }}",
-  "localization-meta": {
+  "original-author-translator": {
     "roles": {
-      "author": "autore",
-      "translator": "traduttore"
+      "author": "Autore: {{ name }} ({{ locale }})",
+      "translator": "Traduttore: {{ name }}"
     },
-    "card-name": "{{ role }}: {{ name }}",
-    "languages": {
-      "en": "Inglese",
-      "es": "Spagnolo",
-      "zh": "Cinese",
-      "pt-br": "Portoghese",
-      "it": "Italiano"
+    "details": {
+      "original-article": "{{ <0> }}Articolo originale:{{ </0> }} {{ title }} di {{ author }}",
+      "translated-by": "{{ <0> }}Tradotto e adattato da:{{ </0> }} {{ translator }}"
+    },
+    "locales": {
+      "english": "inglese",
+      "espanol": "spagnolo",
+      "chinese": "cinese",
+      "portuguese": "portoghese",
+      "italian": "italiano",
+      "japanese": "giapponese",
+      "arabic": "arabo",
+      "urdu": "urdu",
+      "bengali": "bengalese"
     }
   },
   "embed-title": "Contenuto incorporato",
