--- a/config/i18n/locales/portuguese/links.json
+++ b/config/i18n/locales/portuguese/links.json
@@ -2,7 +2,7 @@
   "forum": "https://forum.freecodecamp.org/c/portugues/534",
   "donate": "https://www.freecodecamp.org/portuguese/donate/",
   "banner": {
-    "default": "https://chat.freecodecamp.org/home",
+    "default": "discord.gg/PRyKn3Vbay",
     "authenticated": "https://www.freecodecamp.org/portuguese/donate",
     "authenticated-donor": "https://www.freecodecamp.org/news/how-to-donate-to-free-code-camp/"
   },
