--- a/config/i18n/locales/swahili/translations.json
+++ b/config/i18n/locales/swahili/translations.json
@@ -1,67 +1,67 @@
 {
   "buttons": {
-    "forum": "Forum",
-    "donate": "Donate",
-    "load-more-articles": "Load More Articles"
+    "forum": "Jukwaa",
+    "donate": "Changia",
+    "load-more-articles": "Onyesha Makala Zaidi"
   },
   "search": {
-    "label": "Search",
-    "accessible-name": "Submit your search query",
-    "placeholder": "Search 8,000+ tutorials",
-    "see-results": "See all results for {{ searchQuery }}",
-    "no-tutorials": "No tutorials found"
+    "label": "Tafuta",
+    "accessible-name": "Wasilisha swali lako la utafutaji",
+    "placeholder": "Tafuta zaidi ya mafunzo 8,000+",
+    "see-results": "Tazama matokeo yote ya {{ searchQuery }}",
+    "no-tutorials": "Hakuna mafunzo yaliyopatikana"
   },
   "banner": {
     "default": "Learn to code — {{ <0> }}free 3,000-hour curriculum{{ </0> }}",
-    "authenticated": "Support our nonprofit and our mission. {{ <0> }}Donate to freeCodeCamp.org{{ </0> }}.",
-    "authenticated-donor": "Thank you for supporting freeCodeCamp through {{ <0> }}your donations{{ </0> }}."
+    "authenticated": "Saidia shirika letu lisilo la faida na dhamira yetu. {{ <0> }}Changia kwa freeCodeCamp.org{{ </0> }}.",
+    "authenticated-donor": "Asante kwa kusaidia freeCodeCamp kupitia {{ <0> }}michango yako{{ </0> }}."
   },
-  "default-bio": "Read {{ <0> }}more posts{{ </0> }}.",
+  "default-bio": "Soma {{ <0> }}machapisho zaidi{{ </0> }}.",
   "author": {
-    "no-posts": "No posts",
-    "one-post": "1 post",
-    "multiple-posts": "{{ postCount }} posts"
+    "no-posts": "Hakuna machapisho",
+    "one-post": "Chapisho 1",
+    "multiple-posts": "Machapisho {{ postCount }} "
   },
   "tag": {
-    "no-posts": "A collection of posts",
-    "one-post": "A collection of 1 post",
-    "multiple-posts": "A collection of {{ postCount }} posts"
+    "no-posts": "Mkusanyiko wa machapisho",
+    "one-post": "Mkusanyiko wa chapisho 1",
+    "multiple-posts": "Mkusanyiko wa machapisho {{ postCount }} "
   },
   "404": {
-    "page-not-found": "Page not found",
-    "go-to-front-page": "Go to the front page"
+    "page-not-found": "Ukurasa haujapatikana",
+    "go-to-front-page": "Nenda kwenye ukurasa wa mbele"
   },
   "social-row": {
     "cta": {
-      "tweet-a-thanks": "If you read this far, tweet to the author to show them you care. {{ <0> }}Tweet a thanks{{ </0> }}",
-      "tweet-it": "If this article was helpful, {{ <0> }}tweet it{{ </0> }}."
+      "tweet-a-thanks": "Ukisoma hadi hapa, tweet kwa mwandishi ili kumwonyesha kuwa unajali. {{ <0> }}Tweet shukrani{{ </0> }}",
+      "tweet-it": "Ikiwa makala hii ilikuwa na manufaa, {{ <0> }}ishiriki kwa tweet{{ </0> }}."
     },
     "tweets": {
-      "default": "Thank you {{ author }} for writing this helpful article.",
-      "translation": "Thank you {{ author }} for writing this helpful article, and {{ translator }} for translating it."
+      "default": "Asante {{ author }} kwa kuandika makala hii muhimu.",
+      "translation": "Asante {{ author }} kwa kuandika makala hii muhimu, na {{ translator }} kwa kutafsiri."
     }
   },
-  "learn-to-code-cta": "Learn to code for free. freeCodeCamp's open source curriculum has helped more than 40,000 people get jobs as developers. {{ <0> }}Get started{{ </0> }}",
+  "learn-to-code-cta": "Jifunze kuweka msimbo bila malipo. Mtaala wa chanzo wazi wa freeCodeCamp umesaidia zaidi ya watu 40,000 kupata kazi kama wasanidi. {{ <0> }}Anza{{ </0> }}",
   "original-author-translator": {
     "roles": {
-      "author": "Author: {{ name }} ({{ locale }})",
-      "translator": "Translator: {{ name }}"
+      "author": "Mwandishi: {{ name }} ({{ locale }})",
+      "translator": "Mfasiri: {{ name }}"
     },
     "details": {
-      "original-article": "{{ <0> }}Original article:{{ </0> }} {{ title }} by {{ author }}",
-      "translated-by": "{{ <0> }}Translated by:{{ </0> }} {{ translator }}"
+      "original-article": "{{ <0> }}Makala asilia:{{ </0> }} {{ title }} na {{ author }}",
+      "translated-by": "{{ <0> }}Imetafsiriwa na:{{ </0> }} {{ translator }}"
     },
     "locales": {
-      "arabic": "Arabic",
-      "bengali": "Bengali",
-      "chinese": "Chinese",
-      "english": "English",
-      "espanol": "Spanish",
-      "italian": "Italian",
-      "japanese": "Japanese",
-      "portuguese": "Portuguese",
-      "swahili": "Swahili",
-      "urdu": "Urdu"
+      "arabic": "Kiarabu",
+      "bengali": "Kibengali",
+      "chinese": "Kichina",
+      "english": "Kiingereza",
+      "espanol": "Kihispania",
+      "italian": "Kiitaliano",
+      "japanese": "Kijapani",
+      "portuguese": "Kireno",
+      "swahili": "Kiswahili",
+      "urdu": "Kiurdu"
     }
   },
   "embed-title": "Embedded content",
